force-app/main/default/objects/Pago__c/fields/Metodo_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_de_Pago__c</fullName>
    <label>Metodo de Pago</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarjeta</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>