force-app/main/default/objects/Pago__c/fields/Reserva__c.field-meta.xml
<CustomField>
    <fullName>Reserva__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserva</label>
    <referenceTo>Reserva__c</referenceTo>
    <relationshipLabel>Pagos</relationshipLabel>
    <relationshipName>Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>